Adding default and override hours for each site
