# app/controllers/sites_controller.rb
@@ -142,6 +142,11 @@ class SitesController < ApplicationController
     def site_params
       params.require(:site).permit(:name, :slug,
         :google_place_id, :street, :city, :state, :zip, :latitude, :longitude, 
-        :sitecoordinator, :sitestatus)
+        :sitecoordinator, :sitestatus,
+        :monday_open, :monday_close, :tuesday_open, :tuesday_close, 
+        :wednesday_open, :wednesday_close, :thursday_open, :thursday_close,
+        :friday_open, :friday_close, :saturday_open, :saturday_close,
+        :sunday_open, :sunday_close
+        )
     end
 end
