# app/models/calendar.rb
@@ -1,0 +1,6 @@
+class Calendar < ApplicationRecord
+    belongs_to :site
+
+    serialize :open, Tod::TimeOfDay
+    serialize :close, Tod::TimeOfDay
+end
